fixed the test case and styling